// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattedAmount.vue [FontSizeRate Medium]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-medium"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [FontSizeRate Normal]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [FontSizeRate Small]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-small"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [FontWeightRate Medium]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-medium"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [FontWeightRate Normal]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [FontWeightRate Small]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-small"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [Is Fiat Value With One Decimal Symbol]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
>
  <span
    class="formatted-amount__prefix"
  >
    ~$
  </span>
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .80
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [Is Fiat Value Without Decimals]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
>
  <span
    class="formatted-amount__prefix"
  >
    ~$
  </span>
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .00
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [Is Fiat Value]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
>
  <span
    class="formatted-amount__prefix"
  >
    ~$
  </span>
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .89
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [Symbol In Decimal Container]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--symbol-as-decimal"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <span
      class="formatted-amount__symbol"
    >
      XOR
    </span>
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [Value only]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [With "0" Value]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    0
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [With "NaN" Value]: should be rendered correctly 1`] = `<!---->`;

exports[`FormattedAmount.vue [With 0 Value]: should be rendered correctly 1`] = `<!---->`;

exports[`FormattedAmount.vue [With Empty Value]: should be rendered correctly 1`] = `<!---->`;

exports[`FormattedAmount.vue [With Infinity Value]: should be rendered correctly 1`] = `<!---->`;

exports[`FormattedAmount.vue [With Integer]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [With Left Shift]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--shifted"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <!---->
  </span>
   
  <!---->
   
</span>
`;

exports[`FormattedAmount.vue [With NaN Value]: should be rendered correctly 1`] = `<!---->`;

exports[`FormattedAmount.vue [With asset symbol]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <span
    class="formatted-amount__decimal"
  >
    <span
      class="formatted-amount__decimal-value"
    >
      .890123
    </span>
     
    <!---->
  </span>
   
  <span
    class="formatted-amount__symbol"
  >
    XOR
  </span>
   
</span>
`;

exports[`FormattedAmount.vue [With undefined Value]: should be rendered correctly 1`] = `<!---->`;

exports[`FormattedAmount.vue [Without Decimals]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
>
  <!---->
   
  <span
    class="formatted-amount__integer"
  >
    1,234,567
  </span>
   
  <!---->
   
  <!---->
   
</span>
`;
